# floyd_decibel

./: .gitignore  CMakeLists.txt  README.md  design.md
include/: floyd.hpp
src/: floyd.cpp  main.cpp
